fix song-list overflow

--- a/assets/css/song-list.css
+++ b/assets/css/song-list.css
@@ -6,6 +6,7 @@
   height: 100%;
   background-color: #ead0d1;
   border-radius: 5px;
+  overflow-y: auto;
   transition: 0.35s;
   transform: translateX(100%);
   z-index: 1000;
